--- a/orchestration/log4j.properties
+++ b/orchestration/log4j.properties
@@ -1,5 +1,5 @@
-log4j.debug=FALSE
-log4j.rootLogger=OFF
+log4j.debug=TRUE
+log4j.rootLogger=ON
 #log4j.rootLogger=INFO
 #log4j.debug=TRUE
 #log4j.rootLogger=All
