--- a/orchestration/docker-compose.yml
+++ b/orchestration/docker-compose.yml
@@ -13,6 +13,8 @@ services:
 
   logicmodule1:
     image: "bscdataclay/logicmodule"
+    depends_on:
+      - lmpostgres1
     ports:
       - "11034:1034"
     env_file:
@@ -37,6 +39,8 @@ services:
 
   ds1java1:
     image: "bscdataclay/dsjava"
+    depends_on:
+      - ds1postgres1
     ports:
       - 2127
     env_file:
@@ -58,6 +62,8 @@ services:
 
   ds2java1:
     image: "bscdataclay/dsjava"
+    depends_on:
+      - ds2postgres1
     ports:
       - 2127
     env_file:
@@ -79,6 +85,8 @@ services:
   # See initDC.sh shell script for more information on initialization
   ds1pythonee1:
     image: "bscdataclay/dspython"
+    depends_on:
+      - ds1java1
     ports:
       - 6867
     env_file:
@@ -103,6 +111,8 @@ services:
 
   logicmodule2:
     image: "bscdataclay/logicmodule"
+    depends_on:
+      - lmpostgres2
     ports:
       - "12034:2034"
     env_file:
@@ -127,6 +137,8 @@ services:
 
   ds1java2:
     image: "bscdataclay/dsjava"
+    depends_on:
+      - ds1postgres2
     ports:
       - 2127
     env_file:
@@ -148,6 +160,8 @@ services:
   # See initDC.sh shell script for more information on initialization
   ds1pythonee2:
     image: "bscdataclay/dspython"
+    depends_on:
+      - ds1java2
     ports:
       - 6867
     env_file:
@@ -172,6 +186,8 @@ services:
 
   logicmodule_bk:
     image: "bscdataclay/logicmodule"
+    depends_on:
+      - lmpostgres_bk
     ports:
       - "13034:3034"
     env_file:
