dataclay-proxy upgrade + minor fix in dClayTool

--- a/dataclay-proxy/cfgfiles/session.properties
+++ b/dataclay-proxy/cfgfiles/session.properties
@@ -1,7 +1,7 @@
 ### StorageItf.init variables
-Account=CIMIjsonUser
-Password=CIMIjsonPass
+Account=cimiUser
+Password=cimiPass
 StubsClasspath=./stubs
-DataSets=CIMIjsonDS
-DataSetForStore=CIMIjsonDS
+DataSets=cimiDS
+DataSetForStore=cimiDS
 DataClayClientConfig=./cfgfiles/client.properties
