--- a/dataclay-proxy/Dockerfile
+++ b/dataclay-proxy/Dockerfile
@@ -5,9 +5,12 @@ ADD stubs /root/dataclay/stubs
 ADD bin /root/dataclay/bin
 ADD cfglog /root/dataclay/cfglog
 ADD src /root/dataclay/src
+
+ADD waitForBackends.sh /root/dataclay/
 ADD buildApp.sh /root/dataclay/
 ADD registerModel_v2.sh /root/dataclay/
 ADD run.sh /root/dataclay/
+
 ADD tool /root/tool
 
 ADD ./target/proxy-0.1.0-SNAPSHOT-standalone.jar /root/dataclay/proxy.jar
