--- a/dataclay-proxy/cfgfiles/session.properties
+++ b/dataclay-proxy/cfgfiles/session.properties
@@ -1,7 +1,7 @@
 ### StorageItf.init variables
-Account=cimiUser
-Password=cimiPass
+Account=CimiUser
+Password=8b1d63c685d44471bce732c32f4888ed
 StubsClasspath=./stubs
-DataSets=cimiDS
-DataSetForStore=cimiDS
+DataSets=CimiDS
+DataSetForStore=CimiDS
 DataClayClientConfig=./cfgfiles/client.properties
