update session properties

--- a/dataclay-proxy/cfgfiles/session.properties
+++ b/dataclay-proxy/cfgfiles/session.properties
@@ -1,7 +1,7 @@
 ### StorageItf.init variables
-Account=CimiUser
-Password=8b1d63c685d44471bce732c32f4888ed
+Account=mf2c
+Password=p4ssw0rd
 StubsClasspath=./stubs
-DataSets=CimiDS
-DataSetForStore=CimiDS
+DataSets=mf2c
+DataSetForStore=mf2c
 DataClayClientConfig=./cfgfiles/client.properties
