stubs are not needed anymore, remove from dockerfile

--- a/dataclay-proxy/Dockerfile
+++ b/dataclay-proxy/Dockerfile
@@ -1,7 +1,7 @@
 FROM openjdk:8-jdk
 
 ADD cfgfiles /root/dataclay/cfgfiles
-ADD stubs /root/dataclay/stubs
+#ADD stubs /root/dataclay/stubs
 ADD bin /root/dataclay/bin
 ADD cfglog /root/dataclay/cfglog
 ADD src /root/dataclay/src
