Removing unnecessary stuff from dataclay proxy + New cimi_dataclay modelling and scripting

--- a/dataclay-proxy/Dockerfile
+++ b/dataclay-proxy/Dockerfile
@@ -1,21 +1,9 @@
 FROM openjdk:8-jdk
-
 ADD cfgfiles /root/dataclay/cfgfiles
-ADD cfglog /root/dataclay/cfglog
 ADD src /root/dataclay/src
-
-ADD waitForBackends.sh /root/dataclay/
-ADD run.sh /root/dataclay/
-
-ADD tool /root/tool
-
 ADD ./target/proxy-2.4-standalone.jar /root/dataclay/proxy.jar
-
-ENV DATACLAY_JAR=/root/tool/lib/dataclayclient.jar
-
 WORKDIR /root/dataclay
-
 EXPOSE 6472
 
-CMD ["sh", "/root/dataclay/run.sh"]
+ENTRYPOINT ["java", "-Dlog4j.configurationFile=file:cfglog/log4j2.xml", "-cp", "proxy.jar", "com.sixsq.dataclay.proxy"]
 
