Implemented Event + new scripts for releasing cimi model and dataclay

--- a/dataclay-proxy/Dockerfile
+++ b/dataclay-proxy/Dockerfile
@@ -5,5 +5,5 @@ ADD ./target/proxy-2.4-standalone.jar /root/dataclay/proxy.jar
 WORKDIR /root/dataclay
 EXPOSE 6472
 
-ENTRYPOINT ["java", "-Dlog4j.configurationFile=file:cfglog/log4j2.xml", "-cp", "proxy.jar", "com.sixsq.dataclay.proxy"]
+ENTRYPOINT ["java", "-cp", "proxy.jar", "com.sixsq.dataclay.proxy"]
 
