Modified release scripts to use versioning for maven and clojure + fixed queries or hrefs in cimi model

--- a/dataclay-proxy/Dockerfile
+++ b/dataclay-proxy/Dockerfile
@@ -1,7 +1,7 @@
 FROM openjdk:8-jdk
 ADD cfgfiles /root/dataclay/cfgfiles
 ADD src /root/dataclay/src
-ADD ./target/proxy-2.4-standalone.jar /root/dataclay/proxy.jar
+ADD proxy.jar /root/dataclay/proxy.jar
 WORKDIR /root/dataclay
 EXPOSE 6472
 
