--- a/cimi_dataclay/wrapper/pom.xml
+++ b/cimi_dataclay/wrapper/pom.xml
@@ -1,47 +1,54 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-  <modelVersion>4.0.0</modelVersion>
-  <groupId>dataclay.mf2c</groupId>
-  <artifactId>wrapper</artifactId>
-  <version>trunk</version>
-  <packaging>jar</packaging>
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+	<modelVersion>4.0.0</modelVersion>
+	<groupId>dataclay.mf2c</groupId>
+	<artifactId>wrapper</artifactId>
+	<version>trunk</version>
+	<packaging>jar</packaging>
 	<properties>
-    	<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 	</properties>
-  <build>
-    <sourceDirectory>src</sourceDirectory>
-    <plugins>
-      <plugin>
-        <artifactId>maven-compiler-plugin</artifactId>
-        <version>3.7.0</version>
-        <configuration>
-          <source>1.8</source>
-          <target>1.8</target>
-        </configuration>
-      </plugin>
-    </plugins>
-  </build>
-  <repositories>
-	  <repository>
-	    <id>DataClay repository</id>
-	    <url>https://raw.github.com/bsc-ssrg/dataclay-maven/repository/</url>
-	</repository>
-  </repositories>
-  <dependencies>
-  	<dependency>
-  		<groupId>dataclay</groupId>
-  		<artifactId>dataclay</artifactId>
-  		<version>trunk</version>
-  	</dependency>
-	<dependency>
-	    <groupId>dataclay.mf2c</groupId>
-	    <artifactId>stubs</artifactId>
-	    <version>trunk</version>
-	</dependency>
-  	<dependency>
-  		<groupId>org.json</groupId>
-  		<artifactId>json</artifactId>
-  		<version>20170516</version>
-  	</dependency>
-  </dependencies>
+	<build>
+		<sourceDirectory>src</sourceDirectory>
+		<plugins>
+			<plugin>
+				<artifactId>maven-compiler-plugin</artifactId>
+				<version>3.7.0</version>
+				<configuration>
+					<source>1.8</source>
+					<target>1.8</target>
+				</configuration>
+			</plugin>
+		</plugins>
+	</build>
+	<repositories>
+		<repository>
+			<id>DataClay repository</id>
+			<url>https://raw.github.com/bsc-ssrg/dataclay-maven/repository/</url>
+		</repository>
+	</repositories>
+	<dependencies>
+		<dependency>
+			<groupId>dataclay</groupId>
+			<artifactId>dataclay</artifactId>
+			<version>trunk</version>
+		</dependency>
+		<dependency>
+			<groupId>dataclay.mf2c</groupId>
+			<artifactId>stubs</artifactId>
+			<version>trunk</version>
+		</dependency>
+		<dependency>
+			<groupId>org.json</groupId>
+			<artifactId>json</artifactId>
+			<version>20170516</version>
+		</dependency>
+		<dependency>
+			<groupId>org.reflections</groupId>
+			<artifactId>reflections</artifactId>
+			<version>0.9.11</version>
+		</dependency>
+
+	</dependencies>
 </project>
