--- a/cimi_dataclay/dockers/docker-compose.yml
+++ b/cimi_dataclay/dockers/docker-compose.yml
@@ -7,7 +7,7 @@ services:
   ####################################
 
   logicmodule1:
-    image: "bscdataclay/logicmodule:trunk"
+    image: "bscdataclay/logicmodule:2.0.dev8"
     ports:
       - "1034:1034"
     env_file:
@@ -24,7 +24,7 @@ services:
   ####################################
 
   ds1java1:
-    image: "bscdataclay/dsjava:trunk"
+    image: "bscdataclay/dsjava:2.0.dev8"
     depends_on:
       - logicmodule1
     ports:
