--- a/cimi_dataclay/model/pom.xml
+++ b/cimi_dataclay/model/pom.xml
@@ -22,13 +22,16 @@
 		<repository>
 			<id>DataClay repository</id>
 			<url>https://raw.github.com/bsc-ssrg/dataclay-maven/repository/</url>
+			<snapshots>
+                <enabled>true</enabled>
+            </snapshots>
 		</repository>
 	</repositories>
 	<dependencies>
 		<dependency>
 			<groupId>dataclay</groupId>
 			<artifactId>dataclay</artifactId>
-			<version>2.0.dev4</version>
+			<version>2.0.dev8</version>
 		</dependency>
 	</dependencies>
 </project>
