--- a/data_management/DockerfileLMMf2c-arm
+++ b/data_management/DockerfileLMMf2c-arm
@@ -1,4 +1,4 @@
-FROM bscdataclay/logicmodule:rpi-zulujdk
+FROM bscdataclay/logicmodule:2.0.dev9-arm
 MAINTAINER dataClay team <support-dataclay@bsc.es>
 
 COPY ./LM.sqlite /tmp/dataclay/LM
