--- a/data_management/DockerfileLMMf2c-arm
+++ b/data_management/DockerfileLMMf2c-arm
@@ -1,4 +1,11 @@
-FROM bscdataclay/logicmodule:2.0.dev9-arm
+FROM ubuntu:19.04
+RUN apt-get -y update
+RUN apt-get install -y sqlite3 libsqlite3-dev
+COPY ./LM.sqlite /tmp/dataclay/dump.sql
+RUN sqlite3 "/tmp/dataclay/LM" ".read /tmp/dataclay/dump.sql"
+
+
+FROM bscdataclay/logicmodule:${DATACLAY_TAG}
 MAINTAINER dataClay team <support-dataclay@bsc.es>
 
 COPY ./LM.sqlite /tmp/dataclay/LM
