Adding SSL security + updating release scripts and using Java 11

--- a/data_management/DockerfileDSMf2c
+++ b/data_management/DockerfileDSMf2c
@@ -1,6 +1,5 @@
-ARG DATACLAY_JDK
 ARG DATACLAY_TAG
-FROM bscdataclay/dsjava:${DATACLAY_TAG}-${DATACLAY_JDK}
+FROM bscdataclay/dsjava:${DATACLAY_TAG}
 MAINTAINER dataClay team <support-dataclay@bsc.es>
 
 COPY ./execClasses execClasses
