--- a/data_management/DockerfileLMMf2c
+++ b/data_management/DockerfileLMMf2c
@@ -1,6 +1,5 @@
-ARG DATACLAY_JDK
 ARG DATACLAY_TAG
-FROM bscdataclay/logicmodule:${DATACLAY_TAG}-${DATACLAY_JDK}
+FROM bscdataclay/logicmodule:${DATACLAY_TAG}
 MAINTAINER dataClay team <support-dataclay@bsc.es>
 
 COPY ./LM.sqlite /tmp/dataclay/dump.sql
