--- a/data_management/dockers/docker-compose.yml
+++ b/data_management/dockers/docker-compose.yml
@@ -7,7 +7,7 @@ services:
   ####################################
 
   logicmodule1:
-    image: "bscdataclay/logicmodule:2.0.dev11"
+    image: "bscdataclay/logicmodule:${DATACLAY_VERSION}"
     ports:
       - "1034:1034"
     env_file:
@@ -24,7 +24,7 @@ services:
   ####################################
 
   ds1java1:
-    image: "bscdataclay/dsjava:2.0.dev11"
+    image: "bscdataclay/dsjava:${DATACLAY_VERSION}"
     depends_on:
       - logicmodule1
     ports:
