--- a/data_management/tests/dockers/docker-compose-ssl.yml
+++ b/data_management/tests/dockers/docker-compose-ssl.yml
@@ -1,46 +1,70 @@
-version: '2'
+version: '3.4'
 
 services:
+
+  proxy:
+    image: traefik:v1.7.17
+    restart: unless-stopped
+    command: --api --docker --docker.exposedByDefault=false
+    volumes:
+      - /var/run/docker.sock:/var/run/docker.sock:ro
+      - ./traefik/traefik.toml:/traefik.toml
+      - ../certs:/ssl:ro
+    ports:
+      - "80:80"
+      - "8080:8080"
+      - "443:443"
 
   ####################################
   #  LOGIC MODULE ON DC 1            #
   ####################################
   logicmodule1:
     image: mf2c/dataclay-logicmodule:latest
-    ports:
-      - "11034:11034"
     env_file:
       - ./env/LM.environment
     environment:
       - DATACLAY_ADMIN_USER=admin
       - DATACLAY_ADMIN_PASSWORD=admin
     volumes:
-      - ./prop/global.properties:/usr/src/dataclay/cfgfiles/global.properties:ro
+      - ./prop/global.secure.properties:/usr/src/dataclay/cfgfiles/global.properties:ro
       - ./prop/log4j2.xml:/usr/src/dataclay/log4j2.xml:ro
       - ../certs:/ssl/:ro
 
     command: ["-Xdebug", "-Dlog4j.configurationFile=/usr/src/dataclay/log4j2.xml",
               "-agentlib:jdwp=transport=dt_socket,address=8000,server=y,suspend=n",
               "dataclay.logic.server.LogicModuleSrv"]
+    labels:
+      - "traefik.enable=true"
+      - "traefik.backend=logicmodule1"
+      - "traefik.frontend.rule=Headers: service-alias,logicmodule1"
+      - "traefik.port=11034"
+      - "traefik.protocol=h2c"
+    healthcheck:
+       interval: 5s
+       retries: 10
+       test: ["CMD-SHELL", "health_check/logicmodule_health_check.sh"]
 
   ####################################
   #  JAVA DATA SERVICES ON DC 1      #
   ####################################
   ds1java1:
     image: mf2c/dataclay-dsjava:latest
-    ports:
-      - "2127:2127"
     depends_on:
       - logicmodule1
+      - proxy
     env_file:
       - ./env/DS.environment
-      - ./env/LM.environment
+      - ./env/LM_DS.environment
     environment:
       - DATASERVICE_NAME=DS1
     volumes:
-      - ./prop/global.properties:/usr/src/dataclay/cfgfiles/global.properties:ro
+      - ./prop/global.secure.properties:/usr/src/dataclay/cfgfiles/global.properties:ro
       - ./prop/log4j2.xml:/usr/src/dataclay/log4j2.xml:ro
       - ../certs:/ssl/:ro
     command: ["-Xdebug", "-Dlog4j.configurationFile=/usr/src/dataclay/log4j2.xml",
               "-agentlib:jdwp=transport=dt_socket,address=8000,server=y,suspend=n",
               "dataclay.dataservice.server.DataServiceSrv"]
+    healthcheck:
+       interval: 5s
+       retries: 10
+       test: ["CMD-SHELL", "health_check/dataservice_health_check.sh"]
