--- a/data_management/model/pom.xml
+++ b/data_management/model/pom.xml
@@ -5,16 +5,18 @@
 	<groupId>CIMImodel</groupId>
 	<artifactId>CIMImodel</artifactId>
 	<version>1</version>
+	<properties>
+		<maven.compiler.target>8</maven.compiler.target>
+		<maven.compiler.source>8</maven.compiler.source>
+		<maven.compiler.release>8</maven.compiler.release>
+		
+	</properties>
 	<build>
 		<sourceDirectory>src</sourceDirectory>
 		<plugins>
 			<plugin>
 				<artifactId>maven-compiler-plugin</artifactId>
 				<version>3.8.1</version>
-				<configuration>
-					<source>11</source>
-					<target>11</target>
-				</configuration>
 			</plugin>
 		</plugins>
 	</build>
@@ -23,15 +25,15 @@
 			<id>DataClay repository</id>
 			<url>https://raw.github.com/bsc-ssrg/dataclay-maven/repository/</url>
 			<snapshots>
-                <enabled>true</enabled>
-            </snapshots>
+				<enabled>true</enabled>
+			</snapshots>
 		</repository>
 	</repositories>
 	<dependencies>
 		<dependency>
 			<groupId>dataclay</groupId>
 			<artifactId>dataclay</artifactId>
-			<version>dataclay-version</version>
+			<version>2.0.8-beta-14</version>
 		</dependency>
 	</dependencies>
 </project>
